bitbucket/manifests/03-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
  name: bitbucket-ingress
  namespace: atlassian-bitbucket
spec:
  rules:
  - host: bitbucket.k8s-srini.s3labs.com
    http:
      paths:
      - backend:
          serviceName: atlassian-bitbucket
          servicePort: 80
        path: /
  tls:
  - hosts:
    - bitbucket.k8s-srini.s3labs.com
    secretName: bitbucket-ingress
